--- a/azure-template.yml
+++ b/azure-template.yml
@@ -6,6 +6,7 @@ parameters:
   appleClangVersions: ""  # Possible values: "10", "" (for no Apple Clang build jobs)
   splitByBuildTypes: "false"  # Possible values: "false", "true"
   requireMoreDiskSpace: "false" # Possible values: "false", "true" - Deletes the entire Java stack for Windows images
+  collectionsBasePath: "."
   collectionsRecipes:  # A list of recipes names
     - name: ""
 
@@ -129,47 +130,47 @@ jobs:
                 AZP_BUILD_WORKER_IMAGE: vs2015-win2012r2
                 CONAN_VISUAL_VERSIONS: 14
                 CONAN_BUILD_TYPES: Release
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
               VS 2015 Debug ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: vs2015-win2012r2
                 CONAN_VISUAL_VERSIONS: 14
                 CONAN_BUILD_TYPES: Debug
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
             ${{ if contains(parameters.vsVersions, 15) }}:
               VS 2017 Release ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: vs2017-win2016
                 CONAN_VISUAL_VERSIONS: 15
                 CONAN_BUILD_TYPES: Release
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
               VS 2017 Debug ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: vs2017-win2016
                 CONAN_VISUAL_VERSIONS: 15
                 CONAN_BUILD_TYPES: Debug
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
             ${{ if contains(parameters.vsVersions, 16) }}:
               VS 2019 Release ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: windows-2019
                 CONAN_VISUAL_VERSIONS: 16
                 CONAN_BUILD_TYPES: Release
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
               VS 2019 Debug ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: windows-2019
                 CONAN_VISUAL_VERSIONS: 16
                 CONAN_BUILD_TYPES: Debug
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
           ${{ if ne(parameters.splitByBuildTypes, 'true') }}:
             ${{ if contains(parameters.vsVersions, 14) }}:
               VS 2015 ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: vs2015-win2012r2
                 CONAN_VISUAL_VERSIONS: 14
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
             ${{ if contains(parameters.vsVersions, 15) }}:
               VS 2017 ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: vs2017-win2016
                 CONAN_VISUAL_VERSIONS: 15
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
             ${{ if contains(parameters.vsVersions, 16) }}:
                 VS 2019 ${{ recipe.name }}:
                 AZP_BUILD_WORKER_IMAGE: windows-2019
                 CONAN_VISUAL_VERSIONS: 16
-                CONAN_RECIPE_DIRECTORY: recipes/${{ recipe.name }}
+                CONAN_RECIPE_DIRECTORY: ${{ parameters.collectionsBasePath }}${{ recipe.name }}
