--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,6 @@ jobs:
     conanPassword: $(CONAN_PASSWORD)
     collectionsBasePath: "recipes/"
     collectionsRecipes:
-      - name: "boost_callable_traits"
-      - name: "boost_compatibility"
-      - name: "boost_config"
+      - name: "test1"
+      - name: "test2"
+      - name: "test3"
