--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,9 @@ jobs:
     conanPassword: $(CONAN_PASSWORD)
     collectionsBasePath: "recipes/"
     collectionsRecipes:
-      - name: "test1"
-      - name: "test2"
-      - name: "test3"
+      - name: "boost_callable_traits"
+        dummy: "bla"
+      - name: "boost_compatibility"
+        dummy: "bla"
+      - name: "boost_config"
+        dummy: "bla"
