--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,6 @@ jobs:
     conanPassword: $(CONAN_PASSWORD)
     collectionsBasePath: "recipes"
     collectionsRecipes:
-      - name: "boost_callable_traits\all"
-      - name: "boost_compatibility\all"
-      - name: "boost_config\all"
+      - name: 'boost_callable_traits\all'
+      - name: 'boost_compatibility\all'
+      - name: 'boost_config\all'
